# llm_project

./: .gitignore  .gitmodules  README.md  README_OrangeGrid.md  clean.py  clean.sub  conda_wrapper.sh  conda_wrapper_eval.sh  conda_wrapper_fine.sh  config.json  eval.py  eval_logic.py  finetuning.py  finetuning.sub  finetuning_skip.py  finetuning_skip.sub  inference.ipynb  requirements.txt
b2_uploader/: README.md  pyproject.toml
b2_uploader/src/: b2_uploader.py
b2_uploader/tests/: hackytests.py
clean_scripts/: README.md  clean.py  clean.sub  conda_wrapper.sh  requirements.txt
cluster_tools/: README.md  bash.sub  show_nodes.sh
configs/: README.md  config_eval.json  config_finetuning.json
eval_scripts/: README.md  analysis.ipynb  conda_wrapper_eval.sh  eval.py  eval.sub  eval_logic.py  eval_logic.sub  eval_params.py  eval_params.sub  eval_quadro.sub  eval_small.sub  logic_analysis.ipynb  run_example.sh
llm_scripts/: README.md  conda_wrapper_fine.sh  finetuning.py  finetuning_skip.py  finetuning_skip.sub  jquirements.txt  requirements.txt  run_example.sh
requirements_envs/eval_model/: environment.yml  min_requirements.txt  top_requirements.txt
requirements_envs/llm_finetuning/: environment.yml  min_requirements.txt  top_requirements.txt
requirements_envs/llm_project/: environment.yml  min_requirements.txt  top_requirements.txt
scripts/: b2_cli.py  download_models.py
utils/: README.md  config.py
